hphp/test/slow/compilation/1238.php.expectf

Fatal error: syntax error, unexpected T_STRING in %s/test/slow/compilation/1238.php on line 3
